tokenization: unigram LM and reordering of subsections

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -15,13 +15,22 @@
   year={2013}
 }
 
-@misc{radford2017learning,
-    title={Learning to Generate Reviews and Discovering Sentiment},
-    author={Alec Radford and Rafal Jozefowicz and Ilya Sutskever},
-    year={2017},
-    eprint={1704.01444},
+@misc{zhang2015text,
+    title={Text Understanding from Scratch},
+    author={Xiang Zhang and Yann LeCun},
+    year={2015},
+    eprint={1502.01710},
     archivePrefix={arXiv},
     primaryClass={cs.LG}
+}
+
+@misc{sennrich2015neural,
+    title={Neural Machine Translation of Rare Words with Subword Units},
+    author={Rico Sennrich and Barry Haddow and Alexandra Birch},
+    year={2015},
+    eprint={1508.07909},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL}
 }
 
 @misc{kalchbrenner2016neural,
@@ -31,6 +40,15 @@
     eprint={1610.10099},
     archivePrefix={arXiv},
     primaryClass={cs.CL}
+}
+
+@misc{radford2017learning,
+    title={Learning to Generate Reviews and Discovering Sentiment},
+    author={Alec Radford and Rafal Jozefowicz and Ilya Sutskever},
+    year={2017},
+    eprint={1704.01444},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG}
 }
 
 @article{lee-etal-2017-fully,
@@ -46,15 +64,6 @@
     pages = "365--378",
 }
 
-@misc{zhang2015text,
-    title={Text Understanding from Scratch},
-    author={Xiang Zhang and Yann LeCun},
-    year={2015},
-    eprint={1502.01710},
-    archivePrefix={arXiv},
-    primaryClass={cs.LG}
-}
-
 @misc{vaswani2017attention,
     title={Attention Is All You Need},
     author={Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Lukasz Kaiser and Illia Polosukhin},
@@ -64,11 +73,33 @@
     primaryClass={cs.CL}
 }
 
-@misc{sennrich2015neural,
-    title={Neural Machine Translation of Rare Words with Subword Units},
-    author={Rico Sennrich and Barry Haddow and Alexandra Birch},
-    year={2015},
-    eprint={1508.07909},
+@inproceedings{kudo-2018-subword,
+    title = "Subword Regularization: Improving Neural Network Translation Models with Multiple Subword Candidates",
+    author = "Kudo, Taku",
+    booktitle = "Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)",
+    month = "July",
+    year = "2018",
+    address = "Melbourne, Australia",
+    publisher = "Association for Computational Linguistics",
+    url = "https://www.aclweb.org/anthology/P18-1007",
+    doi = "10.18653/v1/P18-1007",
+    pages = "66--75"
+}
+
+@misc{provilkov2019bpedropout,
+    title={BPE-Dropout: Simple and Effective Subword Regularization},
+    author={Ivan Provilkov and Dmitrii Emelianenko and Elena Voita},
+    year={2019},
+    eprint={1910.13267},
+    archivePrefix={arXiv},
+    primaryClass={cs.CL}
+}
+
+@misc{wolf2019huggingfaces,
+    title={HuggingFace's Transformers: State-of-the-art Natural Language Processing},
+    author={Thomas Wolf and Lysandre Debut and Victor Sanh and Julien Chaumond and Clement Delangue and Anthony Moi and Pierric Cistac and Tim Rault and Rémi Louf and Morgan Funtowicz and Jamie Brew},
+    year={2019},
+    eprint={1910.03771},
     archivePrefix={arXiv},
     primaryClass={cs.CL}
 }
